# 3D_Renderer

./: .gitignore  3DRenderer  CMakeLists.txt  Notes.md  main  main.cpp
assets/vertex_data/: square.txt  square_no_color.txt  vertices.txt
include/: App.hpp  DeletionQueue.hpp  IndexBuffer.h  Mesh.h  Mesh.hpp  PipelineBuilder.hpp  RendererAPI.h  RendererAPI.hpp  RendererInterface.h  RendererInterface.hpp  Shaders.hpp  Shape.hpp  Texture.hpp  Triangle.hpp  VertexArray.hpp  VertexBuffer.h  VertexBuffer.hpp  VertexLayout.h  VertexLayout.hpp  VkShader.hpp  VulkShader.hpp  VulkanUtil.hpp  enumerations.h
shaders/: compile.bat  shader1.frag  shader2.frag  vulk_shader.frag  vulk_shader.vert  vulk_shader2.frag  vulk_shader2.vert  vulk_shader3.vert
shaders/binaries/: frag.spv  vert2.spv
src/: App.cpp  DataStructures.cpp  DeletionQueue.cpp  IndexBuffer.cpp  Mesh.cpp  PipelineBuilder.cpp  RendererAPI.cpp  RendererInterface.cpp  Shaders.cpp  Texture.cpp  Triangle.cpp  VertexArray.cpp  VertexBuffer.cpp  VertexLayout.cpp  VertexUtil.cpp  VkShader.cpp  VulkShader.cpp  VulkanUtil.cpp
